[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/VisionMode.gd" type="Script" id=1]

[node name="VisionMode" type="CanvasModulate"]
color = Color( 0.203922, 0.560784, 0.309804, 1 )
script = ExtResource( 1 )

[node name="NightvisionTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="NightvisionCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
[connection signal="timeout" from="NightvisionTimer" to="." method="_on_NightVisionTimer_timeout"]
[connection signal="timeout" from="NightvisionCooldownTimer" to="." method="_on_NightvisionCooldownTimer_timeout"]
